--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.1-incubating-SNAPSHOT" />
+  <property name="version" value="1.4.1-incubating" />
 
   <!-- The last version released. -->
   <property name="oldversion" value="1.4.0-incubating" />
