--- a/build.xml
+++ b/build.xml
@@ -40,10 +40,10 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.1-incubating" />
+  <property name="version" value="1.4.2-incubating-SNAPSHOT" />
 
   <!-- The last version released. -->
-  <property name="oldversion" value="1.4.0-incubating" />
+  <property name="oldversion" value="1.4.1-incubating" />
   <!-- The point when we branched for the previous release. -->
   <property name="prev.git.hash"
       value="166417fdb0afd3141c6fd0fdc50043b5e13c2a97" />
