--- a/build.xml
+++ b/build.xml
@@ -676,7 +676,11 @@
       -->
       <sysproperty key="hadoop.tmp.dir" value="${build.test}/hadoop"/>
 
-      <sysproperty key="fs.default.name" value="${fs.default.name}"/>
+     <!--
+       Set to an empty string below due to MAPREDUCE-3736
+     <sysproperty key="fs.default.name" value="${fs.default.name}"/>
+     -->
+      <sysproperty key="fs.default.name" value=""/>
       <sysproperty key="hadoop.test.localoutputfile"
           value="${hadoop.test.localoutputfile}"/>
       <sysproperty key="hadoop.log.dir" value="${test.log.dir}"/>
