--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
     <elseif>
       <equals arg1="${hadoopversion}" arg2="23" />
       <then>
-        <property name="hadoop.version" value="0.23.1-SNAPSHOT" />
+        <property name="hadoop.version" value="0.23.1" />
         <property name="hbase.version" value="0.92.0-SNAPSHOT" />
         <property name="zookeeper.version" value="3.4.2" />
         <property name="hadoop.version.full" value="0.23" />
