--- a/client/pom.xml
+++ b/client/pom.xml
@@ -34,13 +34,38 @@ limitations under the License.
   <dependencies>
     <dependency>
       <groupId>org.apache.sqoop</groupId>
-      <artifactId>sqoop-core</artifactId>
+      <artifactId>sqoop-common</artifactId>
       <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.sqoop</groupId>
-      <artifactId>sqoop-common</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>0.9.94</version>
+    </dependency>
+    <dependency>
+      <groupId>org.fusesource.jansi</groupId>
+      <artifactId>jansi</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>1.8.5</version>
     </dependency>
   </dependencies>
 </project>
