SQOOP-365  Sqoop distribution automation with maven
git-svn-id: https://svn.apache.org/repos/asf/sqoop/branches/sqoop2@1344408 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -68,4 +68,33 @@ limitations under the License.
       <version>1.8.5</version>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>dist</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-dependencies</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
