--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -38,5 +38,16 @@ limitations under the License.
     <url-pattern>/version</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>v1.ConnectorServlet</servlet-name>
+    <servlet-class>org.apache.sqoop.server.v1.ConnectorServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>v1.ConnectorServlet</servlet-name>
+    <url-pattern>/v1/connector</url-pattern>
+  </servlet-mapping>
+
 </web-app>
 
