SQOOP-365  Show connector command
git-svn-id: https://svn.apache.org/repos/asf/sqoop/branches/sqoop2@1346742 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@ limitations under the License.
   
   <servlet-mapping>
     <servlet-name>v1.ConnectorServlet</servlet-name>
-    <url-pattern>/v1/connector</url-pattern>
+    <url-pattern>/v1/connector/*</url-pattern>
   </servlet-mapping>
 
 </web-app>
