--- a/ivy.xml
+++ b/ivy.xml
@@ -107,7 +107,7 @@ under the License.
     <dependency org="junit" name="junit" rev="${junit.version}"
       conf="test->default"/>
     <dependency org="hsqldb" name="hsqldb" rev="${hsqldb.version}"
-      conf="common->default"/>
+      conf="common->default;redist->default"/>
     <dependency org="commons-io" name="commons-io" rev="${commons-io.version}"
       conf="common->default;redist->default"/>
     <dependency org="org.apache.avro" name="avro" rev="${avro.version}"
