SQOOP-525. Enable dist package build by default.
(Bilung Lee via Jarek Jarcec Cecho)


git-svn-id: https://svn.apache.org/repos/asf/sqoop/branches/sqoop2@1367363 13f79535-47bb-0310-9956-ffa450edef68

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -73,7 +73,7 @@ limitations under the License.
     <profile>
       <id>dist</id>
       <activation>
-        <activeByDefault>false</activeByDefault>
+        <activeByDefault>true</activeByDefault>
       </activation>
       <build>
         <plugins>
