Preparing for release 1.4.2
git-svn-id: https://svn.apache.org/repos/asf/sqoop/trunk@1370226 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -87,7 +87,7 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.2-incubating-SNAPSHOT" />
+  <property name="version" value="1.4.2" />
 
   <!-- The last version released. -->
   <property name="oldversion" value="1.4.1-incubating" />
