SQOOP-545 Add IntelliJ IDEA files to RAT exclude
git-svn-id: https://svn.apache.org/repos/asf/sqoop/branches/sqoop2@1371524 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@ limitations under the License.
   </ciManagement>
 
   <inceptionYear>2011</inceptionYear>
-  
+
   <mailingLists>
     <mailingList>
       <name>sqoop-user</name>
@@ -185,6 +185,8 @@ limitations under the License.
                 <excludes>
                   <exclude>.git/</exclude>
                   <exclude>.gitignore</exclude>
+                  <exclude>.idea/</exclude>
+                  <exclude>*.iml</exclude>
                 </excludes>
               </configuration>
             </execution>
