SQOOP-596: Implement connection resource end-to-end

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -18,8 +18,7 @@
 ############################
 # Connection Form
 #
-form-connection-label = Please provide the following information to create a \
-                   connection:
+form-connection-label = Configuration configuration
 form-connection-help = You must supply the information requested in order to \
                    create a connection object.
 
@@ -48,5 +47,12 @@ inp-conn-jdbc-properties-label = JDBC Connection Properties
 inp-conn-jdbc-properties-help = Enter any JDBC properties that should be \
                    supplied during the creation of connection.
 
+# Table From
+#
+form-table-label = Database configuration
+form-table-help = You must supply the information requested in order to create \
+                  a connection object.
 
-
+# Table name
+inp-tbl-table-label = Table name
+inp-tbl-table-help = Name of the table in remote database
