SQOOP-612 Provide unit tests for derby metadata repository

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,7 @@ limitations under the License.
                   <exclude>.gitignore</exclude>
                   <exclude>.idea/</exclude>
                   <exclude>*.iml</exclude>
+                  <exclude>*.log</exclude>
                 </excludes>
               </configuration>
             </execution>
